@@ -23,8 +23,11 @@
 
 #include "LogTimeFormat.h"
 #include "Basics/Exceptions.h"
+#include "Basics/datetime.h"
 
 #include <chrono>
+#include <sstream>
+#include <iomanip>
 
 namespace {
 
@@ -36,14 +39,11 @@ std::unordered_map<std::string, arangodb::LogTimeFormats::TimeFormat> const form
   { "timestamp-millis", arangodb::LogTimeFormats::TimeFormat::UnixTimestampMillis }, 
   { "timestamp-micros", arangodb::LogTimeFormats::TimeFormat::UnixTimestampMicros }, 
   { "utc-datestring", arangodb::LogTimeFormats::TimeFormat::UTCDateString }, 
-//  { "utc-datestring-millis", arangodb::LogTimeFormats::TimeFormat::UTCDateStringMillis }, 
-//  { "utc-datestring-micros", arangodb::LogTimeFormats::TimeFormat::UTCDateStringMicros }, 
+  { "utc-datestring-millis", arangodb::LogTimeFormats::TimeFormat::UTCDateStringMillis }, 
   { "local-datestring", arangodb::LogTimeFormats::TimeFormat::LocalDateString }, 
-//  { "local-datestring-micros", arangodb::LogTimeFormats::TimeFormat::LocalDateStringMillis }, 
-//  { "local-datestring-micros", arangodb::LogTimeFormats::TimeFormat::LocalDateStringMicros }, 
 };
 
-std::chrono::time_point<std::chrono::steady_clock> const startTime = std::chrono::steady_clock::now();
+std::chrono::time_point<std::chrono::system_clock> const startTime = std::chrono::system_clock::now();
 
 }
 
@@ -52,9 +52,7 @@ namespace LogTimeFormats {
 
 /// @brief whether or not the specified format is a local one
 bool isLocalFormat(TimeFormat format) {
-  return format == TimeFormat::LocalDateString || 
-         format == TimeFormat::LocalDateStringMillis ||
-         format == TimeFormat::LocalDateStringMicros;
+  return format == TimeFormat::LocalDateString; 
 }
 
 /// @brief return the name of the default log time format
@@ -84,78 +82,60 @@ TimeFormat formatFromName(std::string const& name) {
   return (*it).second;
 }
   
-void writeTime(char* buffer, size_t bufferSize, TimeFormat format) {
+void writeTime(std::ostream& out, TimeFormat format) {
+  std::chrono::system_clock::time_point tp = std::chrono::system_clock::now();
+
   if (format == TimeFormat::Uptime) {
     // integral uptime value
-    auto seconds = static_cast<unsigned long long>(std::chrono::duration_cast<std::chrono::seconds>(std::chrono::steady_clock::now() - ::startTime).count());
-    snprintf(buffer, bufferSize, "%llu ", seconds);
-
+    out << std::chrono::duration_cast<std::chrono::seconds>(tp - ::startTime).count();
   } else if (format == TimeFormat::UptimeMillis) {
     // uptime with millisecond precision
-    auto millis = static_cast<unsigned long long>(std::chrono::duration_cast<std::chrono::milliseconds>(std::chrono::steady_clock::now() - ::startTime).count());
-    auto tmp = millis / 1'000;
-    snprintf(buffer, bufferSize, "%llu.%03llu ", tmp, millis - tmp * 1'000);
-
+    std::chrono::system_clock::time_point tp2(std::chrono::duration_cast<std::chrono::seconds>(tp - ::startTime));
+    std::chrono::system_clock::time_point tp3(std::chrono::duration_cast<std::chrono::milliseconds>(tp - ::startTime));
+    out << std::chrono::duration_cast<std::chrono::seconds>(tp2.time_since_epoch()).count() << '.' 
+        << std::setfill('0') << std::setw(3) 
+        << std::chrono::duration_cast<std::chrono::milliseconds>(tp3 - tp2).count();
   } else if (format == TimeFormat::UptimeMicros) {
     // uptime with microsecond precision
-    auto micros = static_cast<unsigned long long>(std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::steady_clock::now() - ::startTime).count());
-    auto tmp = micros / 1'000'000;
-    snprintf(buffer, bufferSize, "%llu.%06llu ", tmp, micros - tmp * 1'000'000);
-
+    std::chrono::system_clock::time_point tp2(std::chrono::duration_cast<std::chrono::seconds>(tp - ::startTime));
+    std::chrono::system_clock::time_point tp3(std::chrono::duration_cast<std::chrono::microseconds>(tp - ::startTime));
+    out << std::chrono::duration_cast<std::chrono::seconds>(tp2.time_since_epoch()).count() << '.' 
+        << std::setfill('0') << std::setw(6) 
+        << std::chrono::duration_cast<std::chrono::microseconds>(tp3 - tp2).count();
   } else if (format == TimeFormat::UnixTimestamp) {
     // integral unix timestamp
-    auto seconds = static_cast<unsigned long long>(std::chrono::duration_cast<std::chrono::seconds>(std::chrono::system_clock::now().time_since_epoch()).count());
-    snprintf(buffer, bufferSize, "%llu ", seconds);
-
+    out << std::chrono::duration_cast<std::chrono::seconds>(tp.time_since_epoch()).count();
   } else if (format == TimeFormat::UnixTimestampMillis) {
     // unix timestamp with millisecond precision
-    auto millis = static_cast<unsigned long long>(std::chrono::duration_cast<std::chrono::milliseconds>(std::chrono::system_clock::now().time_since_epoch()).count());
-    auto tmp = millis / 1'000;
-    snprintf(buffer, bufferSize, "%llu.%03llu ", tmp, millis - tmp * 1'000);
-
+    std::chrono::system_clock::time_point tp2(std::chrono::duration_cast<std::chrono::seconds>(tp.time_since_epoch()));
+    out << std::chrono::duration_cast<std::chrono::seconds>(tp2.time_since_epoch()).count() << '.'
+        << std::setfill('0') << std::setw(3) 
+        << std::chrono::duration_cast<std::chrono::milliseconds>(tp - tp2).count();
   } else if (format == TimeFormat::UnixTimestampMicros) {
     // unix timestamp with microsecond precision
-    auto micros = static_cast<unsigned long long>(std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count());
-    auto tmp = micros / 1'000'000;
-    snprintf(buffer, bufferSize, "%llu.%06llu ", tmp, micros - tmp * 1'000'000);
-
+    std::chrono::system_clock::time_point tp2(std::chrono::duration_cast<std::chrono::seconds>(tp.time_since_epoch()));
+    out << std::chrono::duration_cast<std::chrono::seconds>(tp2.time_since_epoch()).count() << '.'
+        << std::setfill('0') << std::setw(6) 
+        << std::chrono::duration_cast<std::chrono::microseconds>(tp - tp2).count();
   } else {
     // all date-string variants handled here
-    time_t tt = time(nullptr);
-    struct tm tb;
-
     if (format == TimeFormat::UTCDateString) {
       // UTC datestring
-      TRI_gmtime(tt, &tb);
-      strftime(buffer, bufferSize, "%Y-%m-%dT%H:%M:%SZ ", &tb);
-/*
+      out << arangodb::basics::formatDate("%yyyy-%mm-%ddT%hh:%ii:%ssZ", tp_sys_clock_ms(std::chrono::duration_cast<std::chrono::milliseconds>(tp.time_since_epoch())));
     } else if (format == TimeFormat::UTCDateStringMillis) {
       // UTC datestring with milliseconds
-      TRI_gmtime(tt, &tb);
-      strftime(buffer, bufferSize, "%Y-%m-%dT%H:%M:%S.000Z ", &tb);
-
-    } else if (format == TimeFormat::UTCDateStringMicros) {
-      // UTC datestring with microseconds
-      TRI_gmtime(tt, &tb);
-      strftime(buffer, bufferSize, "%Y-%m-%dT%H:%M:%S.000000Z ", &tb);
-*/
+      out << arangodb::basics::formatDate("%yyyy-%mm-%ddT%hh:%ii:%ss.%fffZ", tp_sys_clock_ms(std::chrono::duration_cast<std::chrono::milliseconds>(tp.time_since_epoch())));
     } else if (format == TimeFormat::LocalDateString) {
       // local datestring
-      TRI_localtime(tt, &tb);
-      strftime(buffer, sizeof(buffer), "%Y-%m-%dT%H:%M:%S ", &tb);
-/*
-    } else if (format == TimeFormat::LocalDateStringMillis) {
-      // local datestring with milliseconds
-      TRI_localtime(tt, &tb);
-      strftime(buffer, sizeof(buffer), "%Y-%m-%dT%H:%M:%S.000 ", &tb);
+      time_t tt = time(nullptr);
+      struct tm tb;
 
-    } else if (format == TimeFormat::LocalDateStringMicros) {
-      // local datestring with microseconds
       TRI_localtime(tt, &tb);
-      strftime(buffer, sizeof(buffer), "%Y-%m-%dT%H:%M:%S.000000 ", &tb);
-*/
+      char buffer[32];
+      strftime(buffer, sizeof(buffer), "%Y-%m-%dT%H:%M:%S", &tb);
+      out << std::string(&buffer[0]);
     }
-  } 
+  }
 }
 
 }  // namespace LogTimeFormats
