@@ -11,6 +11,7 @@ devel
   - uptime-millis: seconds since server start, with millisecond precision
   - uptime-micros: seconds since server start, with microsecond precision
   - utc-datestring: UTC-based date and time in format YYYY-MM-DDTHH:MM:SSZ 
+  - utc-datestring-millis: UTC-based date and time in format YYYY-MM-DDTHH:MM:SS.FFFZ 
   - local-datestring: local date and time in format YYYY-MM-DDTHH:MM:SS
 
   This change deprecates the existing options `--log.use-microtime` and 
